--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 :root {
   --primary: #2A7AE4;
-  --black: #8fadad; /*corrigir variavel depois no restante do código*/
+  --blogColor: #8fadad; /*corrigir variavel depois no restante do código*/
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
